# debugpy_poc

./: .gitignore  README.md  attach_debuggee.py  launch_debuggee.py  launcher.py  pyproject.toml  rundebugpy.py
pydebuggee/: __main__.py
pydebuggee/api/: __init__.py  operation.py
